# stedi-lakehouse

./: .env.example  .flake8  .gitignore  README.md  pyproject.toml
src/: config.py
src/catalog/curated/: customer_curated.py
src/catalog/landing/: __init__.py  accelerometer_landing.sql  customer_landing.sql
src/catalog/trusted/: accelerometer_landing_to_trusted.py  customer_landing_to_trusted.py  step_trainer_landing_to_trusted.py
src/decommissioning/: __init__.py  glue_role_decommissioning.py  s3_decommissioning.py
src/provisioning/: __init__.py  glue_role_provisioning.py  s3_provisioning.py
src/utils/: format_aws_http_response.py  upload_folder.py
