[tool.poetry]
name = "stedi-lakehouse"
version = "0.1.0"
description = ""
authors = ["HarrisonHenri <harrisonhenrisn@gmail.com>"]
readme = "README.md"
packages = [{include = "stedi_lakehouse"}]

[tool.poetry.dependencies]
python = "^3.9"
black = {extras = ["d"], version = "^23.7.0"}
flake8 = "^6.1.0"
boto3 = "^1.28.38"
python-decouple = "^3.8"
boto3-stubs-lite = {extras = ["ec2", "iam", "s3"], version = "^1.28.38"}
boto3-stubs = "^1.28.38"
botocore = "^1.31.38"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
